--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,28 +1,45 @@
-name: My Workflow
+name: action
 
 on:
   push:
     branches: [main]
 
 jobs:
-  my-job:
+  build:
     runs-on: ubuntu-latest
 
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build
+        run: npm run build
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
     env:
       CLOUDINARY_CLOUD_NAME: ${{ secrets.CLOUDINARY_CLOUD_NAME }}
       CLOUDINARY_KEY: ${{ secrets.CLOUDINARY_KEY }}
       CLOUDINARY_SECRET: ${{ secrets.CLOUDINARY_SECRET }}
       MAPBOX_TOKEN: ${{ secrets.MAPBOX_TOKEN }}
       DB_URL: ${{ secrets.DB_URL }}
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Print secrets
+      - name: Install dependencies
+        run: npm install
+
+      - name: Deploy
+        env:
+          CLOUDINARY_CLOUD_NAME: ${{ secrets.CLOUDINARY_CLOUD_NAME }}
+          CLOUDINARY_KEY: ${{ secrets.CLOUDINARY_KEY }}
+          CLOUDINARY_SECRET: ${{ secrets.CLOUDINARY_SECRET }}
+          MAPBOX_TOKEN: ${{ secrets.MAPBOX_TOKEN }}
+          DB_URL: ${{ secrets.DB_URL }}
         run: |
-          echo "CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}"
-          echo "CLOUDINARY_KEY=${CLOUDINARY_KEY}"
-          echo "CLOUDINARY_SECRET=${CLOUDINARY_SECRET}"
-          echo "MAPBOX_TOKEN=${MAPBOX_TOKEN}"
-          echo "DB_URL=${DB_URL}"
+          npm run deploy
