--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -30,6 +30,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          node-version: 16
 
       - name: Install dependencies
         run: npm install
