--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "rimraf dist",
     "build:client": "webpack --config webpack.config.client.js",
     "build:server": "webpack --config webpack.config.server.js",
-    "deploy": "node app.js"
+    "deploy": "node index.js"
   },
   "keywords": [],
   "author": "",
